[gd_scene load_steps=15 format=2]

[ext_resource path="res://sprites/UI/crate_44.png" type="Texture" id=1]
[ext_resource path="res://sprites/UI/crate_42.png" type="Texture" id=2]
[ext_resource path="res://sprites/UI/crate_43.png" type="Texture" id=3]
[ext_resource path="res://sprites/UI/playerFace_dark.png" type="Texture" id=4]
[ext_resource path="res://font/GoblinOne-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://scripts/game_ui.gd" type="Script" id=6]
[ext_resource path="res://scripts/advice_button.gd" type="Script" id=7]
[ext_resource path="res://addons/joystick_control/assets/joystick.gd" type="Script" id=8]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=6]
size = 32
font_data = ExtResource( 5 )

[node name="GameUI" type="Control"]
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
OPT_LS_PATHS = [ NodePath("MarginContainer/VBoxContainer/VBoxContainer/MarginContainer/OptionContainer/OptAL"), NodePath("MarginContainer/VBoxContainer/VBoxContainer/MarginContainer/OptionContainer/OptBL"), NodePath("MarginContainer/VBoxContainer/VBoxContainer/MarginContainer/OptionContainer/OptCL") ]
PROB_CONT_L_PATH = NodePath("MarginContainer/VBoxContainer/ProblemContainer/ProblemContentL")
SCORE_L_PATH = NodePath("MarginContainer2/HBoxContainer/PointsContainer/ScoreL")
LIVES_L_PATH = NodePath("MarginContainer/VBoxContainer/HBoxContainer/LivesL")

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 384.0
margin_right = 704.0
margin_bottom = 704.0
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 304.0
margin_bottom = 688.0
custom_constants/separation = 44

[node name="ProblemContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 288.0
margin_bottom = 78.0
custom_constants/separation = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProblemL" type="Label" parent="MarginContainer/VBoxContainer/ProblemContainer"]
margin_right = 288.0
margin_bottom = 31.0
rect_min_size = Vector2( 158, 28 )
custom_fonts/font = SubResource( 1 )
text = "Problema"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProblemContentL" type="Label" parent="MarginContainer/VBoxContainer/ProblemContainer"]
margin_top = 47.0
margin_right = 288.0
margin_bottom = 78.0
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="GridContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 122.0
margin_right = 288.0
margin_bottom = 378.0
custom_constants/hseparation = 64
columns = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 64.0
margin_bottom = 256.0
custom_constants/separation = 32

[node name="OptATR" type="TextureRect" parent="MarginContainer/VBoxContainer/VBoxContainer/VBoxContainer"]
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 32, 32 )
texture = ExtResource( 2 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptBTR" type="TextureRect" parent="MarginContainer/VBoxContainer/VBoxContainer/VBoxContainer"]
margin_top = 96.0
margin_right = 64.0
margin_bottom = 160.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptCTR" type="TextureRect" parent="MarginContainer/VBoxContainer/VBoxContainer/VBoxContainer"]
margin_top = 192.0
margin_right = 64.0
margin_bottom = 256.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_left = 128.0
margin_right = 128.0
margin_bottom = 256.0
custom_constants/margin_top = 18

[node name="OptionContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer"]
margin_top = 18.0
margin_bottom = 256.0
custom_constants/separation = 64
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptAL" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer/OptionContainer"]
margin_bottom = 31.0
custom_fonts/font = SubResource( 2 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptBL" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer/OptionContainer"]
margin_top = 95.0
margin_bottom = 126.0
custom_fonts/font = SubResource( 2 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptCL" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer/OptionContainer"]
margin_top = 190.0
margin_bottom = 221.0
custom_fonts/font = SubResource( 3 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 422.0
margin_right = 288.0
margin_bottom = 486.0
custom_constants/separation = 70

[node name="FaceCTR" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LivesL" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 134.0
margin_top = 16.0
margin_right = 134.0
margin_bottom = 47.0
custom_fonts/font = SubResource( 4 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AdviceButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 530.0
margin_right = 288.0
margin_bottom = 562.0
rect_min_size = Vector2( 106, 32 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_constants/hseparation = 10
disabled = true
text = "Consejo"
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer2" type="MarginContainer" parent="."]
margin_right = 384.0
margin_bottom = 64.0
custom_constants/margin_left = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer2"]
margin_left = 16.0
margin_right = 384.0
margin_bottom = 64.0

[node name="PointsContainer" type="HBoxContainer" parent="MarginContainer2/HBoxContainer"]
margin_right = 152.0
margin_bottom = 64.0
custom_constants/separation = 16

[node name="PointsL" type="Label" parent="MarginContainer2/HBoxContainer/PointsContainer"]
margin_top = 16.0
margin_right = 136.0
margin_bottom = 47.0
custom_fonts/font = SubResource( 4 )
text = "Puntos:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreL" type="Label" parent="MarginContainer2/HBoxContainer/PointsContainer"]
margin_left = 152.0
margin_top = 16.0
margin_right = 152.0
margin_bottom = 47.0
custom_fonts/font = SubResource( 4 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayAgain" type="Button" parent="."]
visible = false
margin_left = 272.0
margin_top = 200.0
margin_right = 430.0
margin_bottom = 246.0
custom_fonts/font = SubResource( 6 )
text = "Jugar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackToOperators" type="Button" parent="."]
visible = false
margin_left = 272.0
margin_top = 328.0
margin_right = 430.0
margin_bottom = 374.0
custom_fonts/font = SubResource( 6 )
text = "Atras"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Joystick" type="Control" parent="."]
margin_left = 544.0
margin_top = 680.0
margin_right = 584.0
margin_bottom = 720.0
rect_scale = Vector2( 2, 1 )
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_down" from="MarginContainer/VBoxContainer/AdviceButton" to="MarginContainer/VBoxContainer/AdviceButton" method="_on_AdviceButton_button_down"]
[connection signal="button_down" from="BackToOperators" to="." method="_on_BackToOperators_button_down"]
